# ToDoList

./: .clang  .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  PROJECT_OVERVIEW.md  README.md  build-frontend.sh  build.sh  dev.sh  docker-compose.yml  docker-dev.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
data/: table.sql  tasks.db  to_do_list.db
docs/: PLANNING.md  requrements.md  tech_stack.md
include/: Statement.h  Task.h  TaskManager.h  TaskPrioritizer.h  ToDoList.h
src/: TaskPrioritizer.cpp  ToDoList.cpp  api.cpp  api_docker.cpp  main.cpp
tests/: ToDoListTests.cpp
tests/api/: ApiTests.cpp
tests/core/: TaskTests.cpp
todo-list-frontend/: Dockerfile  README.md  package-lock.json  package.json
todo-list-frontend/src/: App.js  App.jsx  index.css
todo-list-frontend/src/components/: TaskForm.jsx  TaskItem.jsx  TaskList.jsx  ThemeToggle.jsx
todo-list-frontend/src/contexts/: ThemeContext.jsx
todo-list-frontend/src/services/: taskService.jsx
